# etl

./: .env.dev  .env.example  .env.staging  .env.test  .gitignore  README.md  TASKS.md  pyproject.toml  pytest.ini  report.html  req.txt
.github/workflows/: ci.yaml  manual_trigger.yaml
config/: config.dev.yaml  config.staging.yaml  config.test.yaml  config.yaml  settings.py
framework/clients/: bigquery.py  kafka.py  storage.py  triggers.py
framework/utils/: assertions.py
tests/: conftest.py  test_composer_integration.py  test_e2e_pipeline.py  test_etl_example.py  test_kakfa.py
tests/data/: customer_cdc.csv  customer_ini.csv
